// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render Caterer Header component correctly when type prop is caterer 1`] = `
<div
  className="header"
>
  <div
    className="navbar"
  >
    <Connect(CatererHeader)
      dateType={null}
      showTime={true}
      updateCurrentDate={null}
    />
  </div>
</div>
`;

exports[`Header should render Header component correctly 1`] = `
<div
  className="header homepage"
>
  <div
    className="navbar unauth-navbar"
  >
    <div
      className="page-title"
    >
      <h3>
        <Link
          replace={false}
          to="/"
        >
          BOOK-A-MEAL
        </Link>
      </h3>
    </div>
    <div
      className="navlinks"
    >
      <Link
        className="link"
        replace={false}
        to="/signin"
      >
        Log In
      </Link>
      <Link
        className="link"
        replace={false}
        to="/signup"
      >
        Sign Up
      </Link>
    </div>
  </div>
</div>
`;

exports[`Header should render unauthenticated Header component correctly when type prop is unauth 1`] = `
<div
  className="header unauth"
>
  <div
    className="navbar unauth-navbar"
  >
    <div
      className="page-title"
    >
      <h3>
        <Link
          replace={false}
          to="/"
        >
          BOOK-A-MEAL
        </Link>
      </h3>
    </div>
  </div>
</div>
`;
